--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,17 @@
 * {
     background-color: lavenderblush;
 }
+
+#pictures {
+    height: 250px;
+    width: 350px;
+    display: grid;
+    display: flex;
+    justify-content: space-evenly; 
+    flex-direction: row;   
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 50px;
+    grid-row-gap: 0px;
+
+}
