--- a/public/style.css
+++ b/public/style.css
@@ -2,16 +2,31 @@
     background-color: lavenderblush;
 }
 
-#pictures {
-    height: 250px;
-    width: 350px;
+#main {
     display: grid;
-    display: flex;
-    justify-content: space-evenly; 
-    flex-direction: row;   
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
     grid-column-gap: 50px;
     grid-row-gap: 0px;
+    justify-items: center;
+}
 
+#pictures {
+    border-radius: 10px;
+    height: 250px;
+    width: 350px;
+    overflow: hidden;
+    border: 3px solid purple;
+}
+
+#pictures img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+#pictures p {
+   position: absolute;
+   border: solid black 3px;
+   margin: 0;
 }
