--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,11 @@ header {
     display: flex;
     justify-content: center;
     margin: 10px;
+     border: 3px solid black;
+}
+
+form {
+    border: 3px solid black;
 }
 
 #main {
@@ -16,6 +21,7 @@ header {
     grid-column-gap: 50px;
     grid-row-gap: 0px;
     justify-items: center;
+    
 }
 
 #pictures {
