--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,10 @@
-* {
-    background-color: lavenderblush;
+body {
+    /* background: rgb(206,123,145);
+    background: linear-gradient(0deg, rgba(206,123,145,1) 0%, rgba(229,195,209,1) 100%); */
+    background-color: #E8D7F1;
+    background-color: #D9AFD9;
+    background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+    height: 100vh;
    
 }
 
@@ -7,11 +12,39 @@ header {
     display: flex;
     justify-content: center;
     margin: 10px;
-     border: 3px solid black;
+    border: 1px dashed black;
+    /* height: 50px; */
+    /* box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px; */
+    /* margin-bottom: 50px; */
 }
 
-form {
-    border: 3px solid black;
+header h1 {
+    margin: 3px;   
+    color: #FFFFFF;
+    color: #bc2e1e;
+    background: #edde9c;
+    text-shadow: 0 1px 0px #378ab4, 1px 0 0px #5dabcd, 1px 2px 1px #378ab4, 2px 1px 1px #5dabcd, 2px 3px 2px #378ab4, 3px 2px 2px #5dabcd, 3px 4px 2px #378ab4, 4px 3px 3px #5dabcd, 4px 5px 3px #378ab4, 5px 4px 2px #5dabcd, 5px 6px 2px #378ab4, 6px 5px 2px #5dabcd, 6px 7px 1px #378ab4, 7px 6px 1px #5dabcd, 7px 8px 0px #378ab4, 8px 7px 0px #5dabcd;
+    color: #bc2e1e;
+    background: transparent;
+    font-family: 'DotGothic16', sans-serif;
+}
+
+#inputField {
+    /* border: 3px solid black; */
+    display: flex;
+    justify-content: center;  
+    flex-direction: row;
+    margin: 10px;
+    margin-bottom: 30px;
+    
+}
+
+#inputField input {
+    height: 20px;
+    margin: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+   
+     
 }
 
 #main {
@@ -21,7 +54,7 @@ form {
     grid-column-gap: 50px;
     grid-row-gap: 0px;
     justify-items: center;
-    
+  
 }
 
 #pictures {
@@ -41,4 +74,10 @@ form {
 #pictures p {
    position: absolute;
    margin: 0;
+   font-family: 'DotGothic16', sans-serif;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
 }
