--- a/public/style.css
+++ b/public/style.css
@@ -47,14 +47,13 @@ header h1 {
      
 }
 
-#main {
+#picturesContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
     grid-column-gap: 50px;
     grid-row-gap: 0px;
     justify-items: center;
-  
 }
 
 #pictures {
@@ -63,6 +62,7 @@ header h1 {
     width: 350px;
     overflow: hidden;
     border: 3px solid purple;
+    margin: 20px;
 }
 
 #pictures img {
@@ -75,6 +75,18 @@ header h1 {
    position: absolute;
    margin: 0;
    font-family: 'DotGothic16', sans-serif;
+}
+
+#moreButton {
+    /* visibility: hidden; */
+    position: absolute;
+    margin: 10px;
+    width: 140px;
+    height: 20px;
+    bottom: 0;
+    right: 0;
+    /* display: flex;
+    justify-content: center; */
 }
 
 footer {
