--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,8 @@
 body {
-    /* background: rgb(206,123,145);
-    background: linear-gradient(0deg, rgba(206,123,145,1) 0%, rgba(229,195,209,1) 100%); */
     background-color: #E8D7F1;
     background-color: #D9AFD9;
     background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
     height: 100vh;
-   
 }
 
 header {
@@ -13,9 +10,6 @@ header {
     justify-content: center;
     margin: 10px;
     border: 1px dashed black;
-    /* height: 50px; */
-    /* box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px; */
-    /* margin-bottom: 50px; */
 }
 
 header h1 {
@@ -30,7 +24,6 @@ header h1 {
 }
 
 #inputField {
-    /* border: 3px solid black; */
     display: flex;
     justify-content: center;  
     flex-direction: row;
@@ -85,9 +78,79 @@ header h1 {
     height: 20px;
     bottom: 0;
     right: 0;
-    /* display: flex;
-    justify-content: center; */
 }
+
+#imgContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+#info {
+    border: dotted red 3px; 
+    margin-top: -15px;
+    margin-bottom: 40px;
+}
+
+#modalImgContainer {
+    position: fixed;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+     z-index: 1;
+     background-color: rgba(0, 0, 0, 0.5);
+    cursor: pointer
+}
+
+#modalImg {
+    border: 3px solid black;
+    position: absolute;
+    background-color: lavenderblush;
+    border-radius: 20px;
+}
+
+#modalImg img {
+    width: 500px;
+    height: 350px;
+    object-fit: cover;
+    border: dotted black 3px;
+    margin: 25px;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+#modalImg p {
+    justify-content: center;
+    display: flex;
+}
+
+#x {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: 8px;
+}
+
+#input {
+    /* border: 3px solid brown; */
+    display: flex;
+    flex-direction: column;
+}
+
+#input input {
+    margin: 5px;
+}
+
+/* #inputComment {
+    width: 150px;
+} */
+
+
 
 footer {
     position: absolute;
