--- a/public/style.css
+++ b/public/style.css
@@ -2,14 +2,14 @@ body {
     background-color: #E8D7F1;
     background-color: #D9AFD9;
     background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 header {
     display: flex;
     justify-content: center;
     margin: 10px;
-    border: 1px dashed black;
+    /* border: 1px dashed black; */
 }
 
 header h1 {
@@ -28,7 +28,7 @@ header h1 {
     justify-content: center;  
     flex-direction: row;
     margin: 10px;
-    margin-bottom: 30px;
+   
     
 }
 
@@ -62,9 +62,33 @@ header h1 {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    /* transform: translateY(-10px); */
 }
 
-#pictures p {
+#hot {
+    font-size: 20px;
+    /* border: 3px solid black; */
+    position: absolute;
+    margin: 0;
+    align-self: flex-end;
+    
+}
+
+#emojis {
+    display: flex;
+}
+
+#not {
+   font-size: 20px;
+    /* border: 3px solid black; */
+    position: absolute;
+    margin: 0;
+    align-self: flex-end;
+  
+    /* position: absolute; */
+}
+
+#imageTitle {
    position: absolute;
    margin: 0;
    font-family: 'DotGothic16', sans-serif;
@@ -72,7 +96,7 @@ header h1 {
 
 #moreButton {
     /* visibility: hidden; */
-    position: fixed;
+    position: relative;
     margin: 10px;
     width: 140px;
     height: 20px;
@@ -88,7 +112,7 @@ header h1 {
 }
 
 #info {
-    border: dotted red 3px; 
+    border: dotted black 1px; 
     margin-top: -15px;
     margin-bottom: 40px;
 }
@@ -146,13 +170,26 @@ header h1 {
     margin: 5px;
 }
 
-/* #inputComment {
-    width: 150px;
-} */
+#y {
+   font-size: 80px;
+   position: absolute;
+   right: 45px;
+   top: 30px;
+}
+
+#n {
+   font-size: 80px;
+   position: absolute;
+   right: 45px;
+   top: 30px;
+}
+
+
 
 
 
 footer {
     position: absolute;
-    bottom: 0;
+    bottom: 10px;
+    right: 5px;
 }
